crates/ars-collections/tests/ui/tab_key_duplicate_variant_key.stderr
error: TabKey variant keys must be unique
 --> tests/ui/tab_key_duplicate_variant_key.rs:7:21
  |
7 |     #[tab_key(str = "profile")]
  |                     ^^^^^^^^^
