crates/ars-collections/tests/ui/tab_key_duplicate_variant_key.rs
use ars_collections::TabKey;

#[derive(TabKey)]
enum SettingsTab {
    #[tab_key(str = "profile")]
    Profile,
    #[tab_key(str = "profile")]
    Billing,
}

fn main() {}
